# web-scraper

./: .gitignore  Dockerfile  Makefile  anon.session  complete_CRYPTO_insider_deutscher_in_test_scrape_until_00001.parquet  main.py  parse.py  pyproject.toml  scrape.py
.github/workflows/: test_and_deploy.yml
web_scraper/: main.py  parse.py  scrape_telegram.py  scrape_web.py
