[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Marius Bause <mariusbause@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"
llama-cpp-python = "^0.3.5"
openai = "^1.59.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
