[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Marius Bause <mariusbause@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"
openai = "^1.59.3"
boto3 = "^1.35.92"

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
llama-cpp-python = "^0.3.5"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
